Hot Fix) Add whitespace between FOS in BetterThanG component & Change the logic stopping animation

--- a/app/components/paperShow/components/betterSearch.scss
+++ b/app/components/paperShow/components/betterSearch.scss
@@ -62,6 +62,7 @@
   vertical-align: top;
   font-size: 14px;
   color: $black1;
+  white-space: pre-wrap;
   cursor: pointer;
 
   &:hover {
